[tool.poetry]
name = "rmc"
version = "0.1.1"
description = "Convert to/from v6 .rm files from the reMarkable tablet"
authors = ["Rick Lupton <mail@ricklupton.name>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
rmscene = {git = "https://github.com/ricklupton/rmscene.git"}
click = "^8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[tool.poetry.scripts]
rmc = 'rmc.cli:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
